<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">HIT THE GYM</string>

    <!-- actions -->
    <string name="action_settings">Settings</string>
    <string name="action_add_day">Add Day</string>
    <string name="action_work_out">Work Out</string>
    <string name="action_view_progress">Your Progress</string>
    <string name="action_create_workout">Create Routine</string>
    <string name="action_edit_workout">Edit Routine</string>
    <string name="action_submit">Submit</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_accept">Accept</string>
    <string name="action_dismiss">Dismiss</string>
    <string name="action_delete_routine">Delete Routine</string>
    <string name="action_add_exercise">Add Exercise</string>

    <!-- titles -->
    <string name="title_activity_workout">Work Out</string>
    <string name="title_activity_modify_workout">Modify Routine</string>
    <string name="title_activity_add_workout">Add Routine</string>
    <string name="title_activity_view_stats">Your Progress</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_widget">Today\'s Workout</string>

    <string name="section_format">Hello World from section: %1$d</string>

    <!-- accessibility strings -->
    <string name="accessibility_string_delete_day">Delete Day</string>
    <string name="accessibility_string_delete_routine">Delete Routine</string>
    <string name="accessibility_string_delete_exercise">Delete Exercise</string>

    <!-- empty view strings -->
    <string name="empty_day_text">You have no days for this routine.  Add a day!</string>
    <string name="empty_routines_text">You have no workout routines.  Create a routine!</string>
    <string name="empty_exercise_text">You have no exercises for this day.  Add an exercise!</string>
    <string name="empty_workout_text">You have no exercises scheduled for today.</string>
    <string name="empty_graph_text">Unable to find data for this exercise.</string>
    <string name="empty_progress_text">No exercise data exists :(</string>

    <!-- completed view string -->
    <string name="completed_workout_text">You\'ve completed your workout for today.</string>

    <!-- name strings -->
    <string name="weight">Weight</string>
    <string name="repetitions">Reps</string>
    <string name="sets">Sets</string>
    <string name="exercise">Exercise</string>

    <!--shared preference strings -->
    <string name="prefs_weight_unit_key" translatable="false">weight</string>
    <string name="prefs_weight_unit_default" translatable="false">@string/prefs_weight_unit_imperial_value</string>
    <string name="prefs_weight_unit_metric_label">Kilograms</string>
    <string name="prefs_weight_unit_imperial_label">Pounds</string>
    <string name="prefs_weight_unit_metric_value">metric</string>
    <string name="prefs_weight_unit_imperial_value">imperial</string>
    <string name="prefs_weight_unit_title">Weight Units</string>
    <!-- notifications -->
    <string name="prefs_notifications_key" translatable="false">notifications</string>
    <string name="prefs_notifications_title">Notifications</string>
    <string name="prefs_notifications_label_true">Receive notifications</string>
    <string name="prefs_notifications_label_false">Do not receive notifications</string>
    <!-- rest -->
    <string name="prefs_rest_key">rest</string>
    <string name="prefs_rest_title">Rest Time</string>
    <string name="prefs_rest_summary_format_minutes">
        <xliff:g>%1$d</xliff:g> min <xliff:g>%2$d</xliff:g> sec
    </string>
    <string name="prefs_rest_summary_format">
        <xliff:g>%1$d</xliff:g> sec
    </string>
    <!-- login -->
    <string name="prefs_login_key">login</string>
    <string name="prefs_login_title">Show Login Screen</string>
    <string name="prefs_login_label_true">Show</string>
    <string name="prefs_login_label_false">Don\'t show</string>
    <!-- display name -->
    <string name="prefs_display_name_key">name</string>
    <!-- sign in uid -->
    <string name="prefs_google_user_id_token">id_token</string>

    <!-- format strings -->
    <string name="weight_format_metric" example="20 kg">
        <xliff:g>%1$.1f</xliff:g> kg
    </string>
    <string name="weight_format_imperial" example="20 lb">
        <xliff:g>%1$.1f</xliff:g> lb
    </string>
    <string name="weight_format" example="23.45" translatable="false"><xliff:g>%1$.1f</xliff:g></string>
    <string name="weight_units_metric">kg</string>
    <string name="weight_units_imperial">lb</string>
    <string name="format_reps" example="10 reps">
        <xliff:g>%1$d</xliff:g> reps
    </string>
    <string name="format_sets" example="3 sets">
        <xliff:g>%1$d</xliff:g> sets
    </string>
    <string name="format_rest" example="Time remaining:  01:59">
        Time remaining:  <xliff:g>%1$02d</xliff:g>:<xliff:g>%2$02d</xliff:g>
    </string>
    <string name="format_rest_seconds" example="Seconds remaining:  20">
        Seconds remaining:  <xliff:g>%1$d</xliff:g>
    </string>
    <string name="reps_sets_format" example="10R x 3S"><xliff:g>%1$d</xliff:g>R x <xliff:g>%2$d</xliff:g>S</string>
    <string name="date_format" translatable="false">yyyy-MM-dd</string>
    <string name="format_button_text"><xliff:g>%1$s\'s Progress</xliff:g></string>

    <!-- dialog strings -->
    <string name="dialog_create_workout_title">Create Routine</string>
    <string name="dialog_name_workout_text">Enter a name for your new routine:</string>
    <string name="dialog_select_workout_title">Select Routine</string>
    <string name="dialog_select_days_title">Select Days</string>
    <string name="dialog_create_exercise_title">Create Exercise</string>
    <string name="dialog_create_exercise_text">Enter the details of your new exercise:</string>
    <string name="dialog_rest_title">Take a break!</string>
    <string name="dialog_rest_finished">Get back to work!</string>
    <string name="dialog_edit_exercise_title">Edit Exercise</string>
    <string name="dialog_name_label">Name:</string>
    <string name="dialog_reps_label">Reps:</string>
    <string name="dialog_sets_label">Sets:</string>
    <string name="dialog_weight_label">Weight:</string>
    <string name="dialog_default_exercise_name">Exercise 1</string>
    <string name="dialog_default_routine_name">Routine 1</string>
    <string name="dialog_workout_complete_title">Workout Complete</string>
    <string name="dialog_workout_complete_text">You have completed this workout.  Nice work!</string>

    <!-- hint strings -->
    <string name="hint_workout_name">Routine Name</string>

    <!-- provider string -->
    <string name="content_authority" translatable="false">com.jdelorenzo.capstoneproject.app</string>

    <!-- week days -->
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>

    <!-- error messages -->
    <string name="error_message_exercise_name">Exercise name is required.</string>
    <string name="error_message_sets">At least one set is required.</string>
    <string name="error_message_repetitions">At least one repetition is required.</string>
    <string name="error_message_empty_routine_name">Routine name is required.</string>
    <string name="error_message_duplicate_routine_name">Routine name exists.</string>
    <string name="error_message_invalid_digit">That is not a valid digit.</string>
    <string name="error_message_invalid_weight">That is not a valid weight.</string>
    <string name="error_message_invalid_name">That is not a valid name.</string>
    <string name="error_message_weight_required">Weight is required.</string>

    <!-- default dialog values -->
    <string name="default_sets">3</string>
    <string name="default_reps">10</string>
    <string name="default_weight">0</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="error_connection_failed">Failed to connect.  Please verify your network connection.</string>
    <string name="action_no_sign_in">Continue without signing in</string>
    <string name="button_why_sign_in">Why sign in?</string>
    <string name="sign_in_text">Signing in is not required, but allows the application to back up your workout routine data in the event that your phone is lost or damaged.  If that\'s not important to you, you can opt to skip this screen in settings.</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="authentication_generic_failure">Authentication unsuccessful.</string>

    <string name="dot">.</string>

    <!-- widget strings -->
    <string name="widget_title">Today\'s Workout</string>
    <string name="add_widget">Add widget</string>

    <!-- sync strings -->
    <string name="sync_account_type" translatable="false">@string/app_name</string>

    <!-- firebase analytics strings -->
    <string name="analytics_sign_in_key" translatable="false">sign-in</string>
    <string name="analytics_sign_in_none" translatable="false">none</string>
    <string name="analytics_sign_in__google" translatable="false">google</string>
    <string name="analytics_user_name" translatable="false">name</string>

    <!-- firebase data strings -->
    <string name="routines" translatable="false">routines</string>
    <string name="exercises" translatable="false">exercises</string>
    <string name="days" translatable="false">days</string>
    <string name="weights" translatable="false">weights</string>

    <!-- toast strings -->
    <string name="toast_select_day">Please select a day first.</string>

    <!-- input validation strings -->
    <string name="regex_valid_name" translatable="false">[a-zA-Z\\s0-9]+</string>
    <string name="regex_valid_digit" translatable="false">[0-9]+</string>
    <string name="regex_valid_decimal" translatable="false">[0-9]+\\.?[0-9]*</string>
</resources>
