<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="@bool/prefs_notifications_default_value"
        android:key="@string/prefs_notifications_key"
        android:summaryOn="@string/prefs_notifications_label_true"
        android:summaryOff="@string/prefs_notifications_label_false"
        android:title="@string/prefs_notifications_title" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="@string/prefs_weight_unit_default"
        android:entries="@array/prefs_weight_unit_labels"
        android:entryValues="@array/prefs_weight_unit_values"
        android:key="@string/prefs_weight_unit_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/prefs_weight_unit_title" />

    <com.jdelorenzo.capstoneproject.dialogs.TimePreference
        android:defaultValue="@integer/prefs_rest_default"
        android:key="@string/prefs_rest_key"
        android:title="@string/prefs_rest_title"/>

    <SwitchPreference
        android:defaultValue="@bool/prefs_login_default_value"
        android:key="@string/prefs_login_key"
        android:summaryOn="@string/prefs_login_label_true"
        android:summaryOff="@string/prefs_login_label_false"
        android:title="@string/prefs_login_title"/>
</PreferenceScreen>
