<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="wrap_content"
    app:columnCount="2"
    android:layout_height="wrap_content">
    <android.support.v7.widget.AppCompatAutoCompleteTextView
        app:layout_columnSpan="2"
        android:hint="@string/exercise"
        android:id="@+id/exercise"
        android:inputType="textAutoComplete"
        tools:context="Deadlifts"/>
    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/weight"
        android:hint="@string/weight"
        android:inputType="numberDecimal"/>
    <TextView
        android:id="@+id/weight_units"
        tools:text="lb"/>
    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/repetitions"
        app:layout_columnSpan="2"
        android:hint="@string/repetitions"
        android:inputType="number"/>
    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/sets"
        app:layout_columnSpan="2"
        android:hint="@string/sets"
        android:inputType="number"/>
</android.support.v7.widget.GridLayout>