<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeight">
    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginRight="@dimen/icon_left_margin"
        android:layout_marginEnd="@dimen/icon_left_margin"
        android:background="@color/white"
        android:id="@+id/delete_day_button"
        android:scaleType="fitXY"
        android:layout_margin="4dp"
        android:contentDescription="@string/accessibility_string_delete_workout_day"
        android:src="@drawable/ic_delete_24dp_color_primary"/>
    <android.support.v7.widget.AppCompatAutoCompleteTextView
        android:layout_weight="2"
        android:layout_gravity="center_vertical"
        android:hint="@string/exercise"
        android:id="@+id/exercise_edittext"
        android:maxLines="1"
        android:ellipsize="end"
        android:inputType="textAutoComplete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:context="Deadlifts"/>
    <android.support.v7.widget.AppCompatEditText
        android:layout_weight="1.5"
        android:layout_gravity="center_vertical"
        android:maxLines="1"
        android:ellipsize="end"
        android:id="@+id/weight_edittext"
        android:hint="@string/weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"/>
    <android.support.v7.widget.AppCompatEditText
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        android:id="@+id/repetitions_edittext"
        android:hint="@string/repetitions"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"/>
    <android.support.v7.widget.AppCompatEditText
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        android:id="@+id/sets_edittext"
        android:hint="@string/sets"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"/>
</LinearLayout>